package on_ck.observer.CA6;


// observer
public interface PlayerDataListener {
    void listen(PlayerData player);
}
