@startuml
'https://plantuml.com/class-diagram

class PlayerData{
    int thoiGian, soLuotChoi, diem
}
class DashBoard{
    PlayerData playerdata
    void listen(PlayerData player)
}
interface PlayerDataListener{
    void listen(PlayerData player)
}

PlayerDataListener <-- DashBoard
PlayerData o--> PlayerDataListener : listener
DashBoard --> PlayerData : playerdata
@enduml